# Wayfinder

./: .gitattributes  .gitignore  README.md  RESTART_NOTES.md  _vm_inspect.sh  _vm_k8s.sh  index.html  package-lock.json  package.json  requirements.txt  run_tests.bat  test_embed.py  test_vertex_ai.py
.cargo/: config.toml
.github/workflows/: build-installers.yml  build-windows-installer.yml
docs/: OVERVIEW.md  build_plan.md  todo.md
md_scanner/: __init__.py  clustering.py  embeddings.py  offline.py
md_scanner/extractors/: __init__.py  docx_extractor.py  odf_extractor.py  pdf_extractor.py  pptx_extractor.py  readme.md  xlsx_extractor.py
md_scanner/learning/: suggestion_engine.py
scripts/: tauri-smart-dev.js
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  onnxruntime.lib  onnxruntime_providers_cuda.lib  onnxruntime_providers_shared.lib  onnxruntime_providers_tensorrt.lib  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  file_watcher.rs  git_assistant.rs  main.rs
src/components/: ClusterPanel.tsx  GitAssistant.tsx  LearningModeApp.tsx  NautiClippy.tsx  Wayfinder--Clean.code-workspace
src/hooks/: useFileWatcher.ts
src/services/: tauri.ts
src/styles/: app.css
