[package]
name = "wayfinder-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
md5 = "0.7"
tokio = { version = "1", features = ["full"] }
yup-oauth2 = "10.0.0"
once_cell = "1.19.0"
tauri-plugin-dialog = "2.0.0-beta"
candle-pipelines = "0.0.6"
rusqlite = { version = "0.38.0", features = ["bundled"] }
notify = "8.2.0"
regex = "1.12.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
